fix: Adjust color contrast ratio for accessibility rating

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,7 +290,7 @@ footer p {
 
 #modal-button {
     
-    background-color:  orangered;
+    background-color:  rgb(181, 78, 41);
     background-image: url(../images/background_carbon.webp);
     color: white;
     padding: 20px;
